<resources>
    <string name="nc_title_message">Messages</string>
    <string name="nc_title_contacts">Contacts</string>
    <string name="nc_title_wallets">Wallets</string>
    <string name="nc_title_home">Home</string>
    <string name="nc_title_signers">Keys</string>
    <string name="nc_title_account">Profile</string>
    <string name="nc_text_do_this_later">I’ll do this later</string>
    <string name="nc_wallet_export_coldcard">Export wallet to COLDCARD</string>
    <string name="nc_signer_type_airgapped">Airgapped</string>
    <string name="nc_signer_type_software">Software</string>
    <string name="nc_signer_type_hardware">Wired</string>
    <string name="nc_signer_type_foreign_software">Foreign software</string>
    <string name="nc_signer_type_primary_key">Primary Key</string>
    <string name="nc_transaction_send_to">Send to</string>
    <string name="nc_transaction_receive_at">Receive at</string>
    <string name="nc_transaction_pending_confirmation">Pending confirmations</string>
    <string name="nc_ready_to_broadcast">Ready to broadcast</string>
    <string name="nc_transaction_network_rejected">Network rejected</string>
    <string name="nc_transaction_pending_signatures">Pending signatures</string>
    <string name="nc_transaction_replaced">Replaced</string>
    <string name="nc_transaction_confirmations">confirmations</string>
    <string name="nc_transaction_enter_passphrase">Enter your passphrase</string>
    <plurals name="nc_transaction_pending_signature">
        <item quantity="one">Pending %d signature</item>
        <item quantity="other">Pending %d signatures</item>
    </plurals>
    <plurals name="nc_transaction_pending_conditions">
        <item quantity="one">%1$d condition pending</item>
        <item quantity="other">%1$d conditions pending</item>
    </plurals>
    <plurals name="nc_transaction_pending_nonce">
        <item quantity="one">Pending %d nonce</item>
        <item quantity="other">Pending %d nonces</item>
    </plurals>
    <plurals name="nc_day">
        <item quantity="one">%1$d day</item>
        <item quantity="other">%1$d days</item>
    </plurals>
    <plurals name="nc_block">
        <item quantity="one">%1$d block</item>
        <item quantity="other">%1$d blocks</item>
    </plurals>
    <string name="nc_currency_btc">BTC</string>
    <string name="nc_currency_usd">USD</string>
    <string name="nc_currency_sat">sat</string>
    <string name="nc_message_pending_finalization">Pending finalization</string>
    <string name="nc_message_pending_signers">Pending keys</string>
    <string name="nc_message_wallet_created">Collaborative wallet has been created</string>
    <string name="nc_text_title_permission_denied">Permission Denied</string>
    <string name="nc_text_des_permission_denied">The app can\'t work properly without this permission. Do you want to grant access permission again?</string>
    <string name="nc_text_des_permission_denied_permanently">The permission denied permanently. Do you want to open the application setting to allow it?</string>
    <string name="nc_text_add_contacts">Add contacts</string>
    <string name="nc_text_create_an_account">Create an account</string>
    <string name="nc_text_sign_in">Sign in</string>
    <string name="nc_text_select_file">Please select your transaction file</string>
    <string name="nc_address_share">Share address</string>
    <string name="nc_address_copy">Copy address</string>
    <string name="nc_version">Version</string>
    <string name="nc_transaction_no_app_to_open_link">There is no apps found to open link</string>
    <string name="nc_account_deleted_message">Your account has successfully been deleted</string>
    <string name="nc_nfc">NFC</string>
    <string name="nc_please_turn_on_nfc">Please turn on NFC</string>
    <string name="nc_turn_on_nfc_desc">An NFC connection is required to add an NFC key. Please do the following to turn on NFC connection on your device:</string>
    <string name="nc_no_nfc_title">No NFC support</string>
    <string name="no_nfc_message">This device does not support NFC.</string>
    <string name="nc_incorrect_cvc_please_try_again">Incorrect PIN. Please try again.</string>
    <string name="nc_required_minimum_6_characters">PIN must be between 6 and 32 digits.</string>
    <string name="nc_cvc_incorrect_3_times">Key locked, either due to too many failed PIN attempts or a power loss. To unlock, please hold the key near the device for at least 15 seconds on the next tap.</string>
    <string name="nc_ready_to_scan">Ready to Scan</string>
    <string name="nc_hold_your_device_near_the_nfc">Hold the key near the device.</string>
    <string name="nc_keep_holding_nfc">Keep holding the key near the device until it\'s finished.</string>
    <string name="nc_your_password_changed">Your password has successfully been updated</string>
    <string name="nc_replace_by_fee">Replace-by-Fee</string>
    <string name="nc_rbf">RBF</string>
    <string name="nc_new_fee_rate">New fee rate</string>
    <string name="nc_replace_by_fee_success">Replace-by-Fee successfully</string>
    <string name="nc_none">None</string>
    <string name="nc_private_note_updated">Transaction note has been updated</string>
    <string name="nc_all_slot_used_up">All %1$d slots on your SATSCARD have been used up</string>
    <string name="nc_setup_satscard">Set up SATSCARD</string>
    <string name="nc_satscard">SATSCARD</string>
    <string name="nc_unseal_and_sweep_balance">Unseal and sweep balance</string>
    <string name="nc_view_on_explorer">View on explorer</string>
    <string name="checking_balance">Checking balance…</string>
    <string name="nc_slot">Slot</string>
    <string name="nc_address_copy_to_clipboard">Address copied to clipboard</string>
    <string name="nc_address_derivation_path_have_been_copied">Address derivation path have been copied</string>
    <string name="nc_view_unsealed_slots">View unsealed slots</string>
    <string name="nc_satscard_unsealed_slots">SATSCARD unsealed slots</string>
    <string name="nc_unconfirmed">Unconfirmed</string>
    <string name="nc_sweep_balance">Sweep balance</string>
    <string name="nc_withdraw_to_a_wallet">Withdraw to a wallet</string>
    <string name="nc_withdraw_a_custom_amount">Withdraw a custom amount</string>
    <string name="nc_withdraw_full_balance_now">Withdraw full balance now</string>
    <string name="nc_which_wallet_do_you_want_to_deposit_into">Which wallet do you want to deposit into?</string>
    <string name="nc_which_wallet_do_you_want_to_withdraw_bitcoin">Which wallet do you want to withdraw bitcoin to?</string>
    <string name="nc_wallet_not_configured">Not configured</string>
    <string name="nc_wallet_single_sig">Single-sig</string>
    <string name="nc_wallet_multisig">Multisig</string>
    <string name="nc_wallet_custom_multisig">Custom multisig</string>
    <string name="nc_no_internet_connection">No Internet connection</string>
    <string name="nc_please_wait">Please wait…</string>
    <string name="nc_sweeping_is_progress">Sweeping is in progress</string>
    <string name="nc_make_sure_internet">Please make sure that you are connected to the Internet</string>
    <string name="nc_you_dont_have_a_wallet_yet">You don’t have a wallet yet</string>
    <string name="nc_you_dont_have_a_wallet_yet_desc">We can create a hot wallet for your withdrawals, set up quickly with no keys needed, and you can back it up later.\n\nAlternatively, you can create your own wallet.</string>
    <string name="nc_create_single_sig_for_sweep">We will create a single-sig wallet for you to sweep into.</string>
    <string name="nc_create_my_own_wallet">I’ll create my own wallet</string>
    <string name="nc_satscard_sweeped">Your SATSCARD has been swept</string>
    <string name="nc_confirm_and_sweep">Confirm and sweep balance</string>
    <string name="nc_sweep_to_a_wallet">Sweep to a wallet</string>
    <string name="nc_withdraw_to_an_address">Withdraw to an address</string>
    <string name="nc_transaction_view_blockchain">View on blockchain explorer</string>
    <string name="nc_enter_recipient_address">Enter recipient’s address</string>
    <string name="nc_slot_ready_deposit">Your slot is ready for deposit</string>
    <string name="nc_new_fee_must_high_than_old_fee">Your new fee rate must be higher than your old fee rate.</string>
    <string name="nc_old_fee_rate">Old fee rate</string>
    <string name="nc_create_transaction_new_fee_rate">Create transaction with new fee rate</string>
    <string name="nc_new_fee_rate_must_higher">New fee rate must be higher than old fee rate</string>
    <string name="nc_are_you_sure_to_delete_wallet">Are you sure you want to delete this wallet? Please type DELETE to confirm.</string>
    <string name="nc_incorrect">Incorrect</string>
    <string name="nc_copied_to_clipboard">Copied to your clipboard</string>
    <string name="nc_copy_transaction_id">Copy transaction ID</string>
    <string name="nc_copy_raw_transaction_hex">Copy raw transaction hex</string>
    <string name="nc_show_as_an_invoice">Show as an invoice</string>
    <string name="nc_before_you_start">Before you start</string>
    <string name="nc_ensure_to_following_step">Please ensure to do the following on your COLDCARD before proceeding.</string>
    <string name="nc_init_coldcard">Initialize COLDCARD</string>
    <string name="nc_unlock_coldcard">Unlock COLDCARD</string>
    <string name="nc_add_coldcard_mk4">Add COLDCARD</string>
    <string name="nc_add_coldcard_mk4_desc">You can add COLDCARD via NFC, QR code or by importing a file.</string>
    <string name="nc_coldcard_onchain_verify_backup_desc">Please re-add the key for the spending path [B]after the timelock[/B] to verify. On your device, select [B]account 0[/B] for this spending path.</string>
    <string name="nc_import_signature">Import signature</string>
    <string name="nc_replace_primary_key">Replace Primary Key</string>
    <string name="nc_replace_primary_key_step_guide">A Primary Key is a dual-purpose key that can be used both for account-based authentication and for signing Bitcoin transactions. Please note the following:</string>
    <string name="nc_replace_primary_key_step_1">If you choose to proceed, your Primary Key will be replaced with a new one. Your current Primary Key will be downgraded to a regular key.</string>
    <string name="nc_replace_primary_key_step_2">If you have assigned the current Primary Key to any wallets, those wallets will remain unchanged. You will need the existing key in order to sign transactions in those wallets.</string>
    <string name="nc_replace_primary_key_note">Please do not delete it if there is still a balance.</string>
    <string name="nc_services_tab">Services</string>
    <string name="nc_notification_preferences">Notification preferences</string>
    <string name="nc_beneficiary_trustee_email_address">Beneficiary’s or Trustee’s email address</string>
    <string name="nc_inheritance_notify_pref_desc">After the timelock expires, would you like us to notify the Beneficiary or Trustee of the inheritance plan? If so, please provide an email address.</string>
    <string name="nc_notify_them_today">Also notify them today</string>
    <string name="nc_inheritance_notify_pref_warning">You are responsible for sharing the Magic Phrase and the inheritance key with the Beneficiary or Trustee. Notification emails do not include these secrets.</string>
    <string name="nc_dont_want_any_notifications">I don’t want any notifications</string>
    <string name="nc_transaction_export_transaction">Export transaction</string>
    <string name="nc_inheritance_notify_pref_hint">To include multiple email addresses, separate them by commas or spaces.</string>
    <string name="nc_low">Low</string>
    <string name="nc_medium">Medium</string>
    <string name="nc_high">High</string>
    <string name="nc_density">Density</string>
    <string name="nc_ultra_high">Ultra-High</string>
</resources>