<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_wallets"
        android:icon="@drawable/ic_wallets"
        android:title="@string/nc_title_home" />

    <item
        android:id="@+id/navigation_key"
        android:icon="@drawable/ic_key"
        android:title="@string/nc_title_signers" />

    <item
        android:id="@+id/navigation_services"
        android:icon="@drawable/ic_services"
        android:title="@string/nc_services_tab" />

    <item
        android:id="@+id/navigation_messages"
        android:icon="@drawable/ic_messages"
        android:title="@string/nc_title_message" />

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_account"
        android:title="@string/nc_title_account" />

</menu>