<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/NCToolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_close">

        <com.nunchuk.android.widget.NCFontTextView
            android:id="@+id/toolbarTitle"
            style="@style/NCToolbar.Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nc_transaction_export_transaction" />
    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/qrCode"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="@dimen/nc_padding_16"
        android:scaleType="center"
        app:layout_constraintDimensionRatio="1,1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:src="@drawable/ic_qr" />

    <TextView
        android:id="@+id/tv_density"
        style="@style/NCText.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/nc_padding_16"
        android:text="@string/nc_density"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/qrCode" />

    <com.google.android.material.slider.Slider
        android:id="@+id/slider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:labelBehavior="gone"
        android:stepSize="1"
        android:value="1"
        android:valueFrom="0"
        android:valueTo="3"
        app:layout_constraintTop_toBottomOf="@+id/tv_density" />

    <TextView
        android:id="@+id/tv_low"
        app:layout_constraintTop_toBottomOf="@+id/slider"
        android:layout_marginHorizontal="@dimen/nc_padding_16"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        android:layout_width="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/nc_low"
        style="@style/NCText.Body"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_medium"
        app:layout_constraintTop_toBottomOf="@+id/slider"
        android:layout_width="wrap_content"
        android:layout_marginHorizontal="@dimen/nc_padding_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.3"
        android:text="@string/nc_medium"
        style="@style/NCText.Body"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_high"
        app:layout_constraintTop_toBottomOf="@+id/slider"
        android:layout_marginEnd="@dimen/nc_padding_16"
        android:layout_width="wrap_content"
        android:layout_marginHorizontal="@dimen/nc_padding_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.68"
        android:text="@string/nc_high"
        style="@style/NCText.Body"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_ultra_high"
        app:layout_constraintTop_toBottomOf="@+id/slider"
        android:layout_marginEnd="@dimen/nc_padding_16"
        android:layout_width="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/nc_ultra_high"
        style="@style/NCText.Body"
        android:layout_height="wrap_content"/>

    <com.nunchuk.android.widget.NCFontButton
        android:id="@+id/btnImportSignature"
        style="@style/NCPrimaryButton.Light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/nc_padding_16"
        android:text="@string/nc_import_signature"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>