<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_wallets">

    <fragment
        android:id="@+id/navigation_messages"
        android:name="com.nunchuk.android.main.components.tabs.chat.ChatFragment"
        android:label="@string/nc_title_message"
        tools:layout="@layout/fragment_chat" />

    <fragment
        android:id="@+id/navigation_wallets"
        android:name="com.nunchuk.android.main.components.tabs.wallet.WalletsFragment"
        android:label="@string/nc_title_wallets"
        tools:layout="@layout/fragment_wallets">
        <action
            android:id="@+id/action_navigation_wallets_to_walletDetailsFragment"
            app:destination="@id/wallet_detail_navigation">
            <argument
                android:name="walletId"
                app:argType="string" />

            <argument
                android:name="key_policy"
                android:defaultValue="@null"
                app:argType="com.nunchuk.android.model.KeyPolicy"
                app:nullable="true" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.nunchuk.android.settings.AccountFragment"
        android:label="@string/nc_title_account"
        tools:layout="@layout/fragment_account" />


    <include app:graph="@navigation/wallet_detail_navigation" />
</navigation>